--- a/app/index.html
+++ b/app/index.html
@@ -105,6 +105,7 @@
         <script src="scripts/directives/ngHideAuth.js"></script>
         <script src="scripts/routes.js"></script>
         <script src="scripts/services/budget.js"></script>
+        <script src="scripts/controllers/budget.js"></script>
         <!-- endbuild -->
 </body>
 </html>
