--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,7 @@
         <script src="scripts/routes.js"></script>
         <script src="scripts/services/budget.js"></script>
         <script src="scripts/controllers/budget.js"></script>
+        <script src="scripts/controllers/portfolio.js"></script>
         <!-- endbuild -->
 </body>
 </html>
