yo service recipients

--- a/app/index.html
+++ b/app/index.html
@@ -128,6 +128,7 @@
         <script src="scripts/services/budget.js"></script>
         <script src="scripts/controllers/budget.js"></script>
         <script src="scripts/controllers/portfolio.js"></script>
+        <script src="scripts/services/recipients.js"></script>
         <!-- endbuild -->
 </body>
 </html>
