--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
                 <a href="#/portfolio">Portfolio</a>
               </li>
               <!-- <li>
-                <a href="#/recipients">Recipients</a>
+                <a href="#/recipientOrgs">recipientOrgs</a>
               </li> -->
               <li>
                 <a href="#/account">Account</a>
@@ -128,7 +128,7 @@
         <script src="scripts/services/budget.js"></script>
         <script src="scripts/controllers/budget.js"></script>
         <script src="scripts/controllers/portfolio.js"></script>
-        <script src="scripts/services/recipients.js"></script>
+        <script src="scripts/services/recipientOrgs.js"></script>
         <!-- endbuild -->
 </body>
 </html>
