--- a/app/index.html
+++ b/app/index.html
@@ -109,6 +109,9 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/highcharts-release/highcharts.js"></script>
+    <script src="bower_components/highcharts-release/highcharts-more.js"></script>
+    <script src="bower_components/highcharts-release/modules/exporting.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
