added colorpicker palate

--- a/app/index.html
+++ b/app/index.html
@@ -137,6 +137,7 @@
         <script src="scripts/services/recipientorgs.js"></script>
         <script src="scripts/services/givingchartflat.js"></script>
         <script src="scripts/services/givingchartcategorized.js"></script>
+        <script src="scripts/services/colorpicker.js"></script>
         <!-- endbuild -->
 </body>
 </html>
