--- a/app/index.html
+++ b/app/index.html
@@ -138,6 +138,7 @@
         <script src="scripts/services/givingchartflat.js"></script>
         <script src="scripts/services/givingchartcategorized.js"></script>
         <script src="scripts/services/colorpicker.js"></script>
+        <script src="scripts/controllers/datamigration.js"></script>
         <!-- endbuild -->
 </body>
 </html>
