set footer message

--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team and Firebase</p>
+        <p><sub>This web app is in early phases of development. Please <a href="http://facebook.com/danieljsj" target="_blank">reach out via facebook</a> if you have any questions or concerns. Thank you, ~Daniel Schulz-Jackson</sub></p>
       </div>
     </div>
 
