--- a/app/index.html
+++ b/app/index.html
@@ -154,6 +154,7 @@
         <script src="scripts/services/givingchartcategorized.js"></script>
         <script src="scripts/services/colorpicker.js"></script>
         <script src="scripts/controllers/datamigration.js"></script>
+        <script src="scripts/services/taxonomization.js"></script>
         <!-- endbuild -->
 </body>
 </html>
