added sandbox route to test taxonomization etc.

--- a/app/index.html
+++ b/app/index.html
@@ -155,6 +155,7 @@
         <script src="scripts/services/colorpicker.js"></script>
         <script src="scripts/controllers/datamigration.js"></script>
         <script src="scripts/services/taxonomization.js"></script>
+        <script src="scripts/controllers/sandbox.js"></script>
         <!-- endbuild -->
 </body>
 </html>
