new categories route

--- a/app/index.html
+++ b/app/index.html
@@ -156,6 +156,7 @@
         <script src="scripts/controllers/datamigration.js"></script>
         <script src="scripts/services/taxonomization.js"></script>
         <script src="scripts/controllers/sandbox.js"></script>
+        <script src="scripts/controllers/categories.js"></script>
         <!-- endbuild -->
 </body>
 </html>
