--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
               </li>
             </ul>
 
-            <ul ng-show-auth-NOT="" class="nav navbar-nav">
+            <ul ng-show-auth="" class="nav navbar-nav">
               <!-- <li class="active-NOT">
                 <a href="#/">Home</a>
               </li> -->
@@ -60,9 +60,9 @@
               <li>
                 <a href="#/portfolio">Portfolio</a>
               </li>
-              <!-- <li>
-                <a href="#/recipientOrgs">recipientOrgs</a>
-              </li> -->
+              <li>
+                <a href="#/categories">Categories</a>
+              </li>
               <li>
                 <a href="#/account">Account</a>
               </li>
