--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,10 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+
+    <script>
+      function randId(){return Math.round((Math.random()*.9+0.1) * 10000000000000000)}
+    </script>
   </head>
   <body ng-app="gpApp">
     <!--[if lt IE 7]>
