--- a/app/index.html
+++ b/app/index.html
@@ -162,6 +162,7 @@
         <script src="scripts/controllers/sandbox.js"></script>
         <script src="scripts/controllers/categories.js"></script>
         <script src="scripts/services/givingchartscommon.js"></script>
+        <script src="scripts/controllers/givingchartcategorized.js"></script>
         <!-- endbuild -->
 </body>
 </html>
