--- a/app/index.html
+++ b/app/index.html
@@ -165,6 +165,7 @@
         <script src="scripts/controllers/categories.js"></script>
         <script src="scripts/services/givingchartscommon.js"></script>
         <script src="scripts/controllers/givingchartcategorized.js"></script>
+        <script src="scripts/services/recipientorgsmethods.js"></script>
         <!-- endbuild -->
 </body>
 </html>
