fixed varname typo for lastId/latestId

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 
     <script>
       var latestId;
-      function randId(){lastId = Math.round((Math.random()*.9+0.1) * 10000000000000000);return latestId; }
+      function randId(){latestId=Math.round((Math.random()*.9+0.1)*10000000000000000);return latestId;}
       function lastId(){return latestId;}
     </script>
   </head>
