yo angularfire:route donate

--- a/app/index.html
+++ b/app/index.html
@@ -166,6 +166,7 @@
         <script src="scripts/services/givingchartscommon.js"></script>
         <script src="scripts/controllers/givingchartcategorized.js"></script>
         <script src="scripts/services/recipientorgsmethods.js"></script>
+        <script src="scripts/controllers/donate.js"></script>
         <!-- endbuild -->
 </body>
 </html>
