--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,9 @@
                 <a href="#/categories">Categories</a>
               </li>
               <li>
+                <a href="#/donate">Donations</a>
+              </li>
+              <li>
                 <a href="#/account">Account</a>
               </li>
             </ul>
